--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,12 @@
             </dependency>
             <dependency>
                 <groupId>de.mirkosertic</groupId>
+                <artifactId>gameengine-wasmrenderer</artifactId>
+                <version>${project.version}</version>
+                <type>war</type>
+            </dependency>
+            <dependency>
+                <groupId>de.mirkosertic</groupId>
                 <artifactId>gameengine-dragomerenderer</artifactId>
                 <version>${project.version}</version>
                 <type>war</type>
