Prototypal renderer implemented with Bytecoder

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,8 @@ before_install:
   - "npm install cordova -g"
   - "npm install bower -g"
   - "npm install vulcanize -g"
-  - "git clone https://github.com/mirkosertic/teavm.git ./teavm"
-  - "cd teavm"
-  - "git checkout devmse"
-  - "mvn clean install -DskipTests -Dteavm.build.all=false"
+  - "git clone https://github.com/mirkosertic/Bytecoder.git ./bytecoder"
+  - "cd bytecoder"
+  - "mvn clean install -P notest"
   - "cd .."
   - "env"
