--- a/gameengine-androidrenderer/pom.xml
+++ b/gameengine-androidrenderer/pom.xml
@@ -19,7 +19,6 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<platform.version>4.0.1.2</platform.version>
-		<android.plugin.version>4.0.0-rc.2</android.plugin.version>
 	</properties>
 
 	<dependencies>
@@ -57,9 +56,9 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<groupId>com.jayway.maven.plugins.android.generation2</groupId>
+					<groupId>com.simpligility.maven.plugins</groupId>
 					<artifactId>android-maven-plugin</artifactId>
-					<version>${android.plugin.version}</version>
+					<version>4.3.0</version>
 					<extensions>true</extensions>
 				</plugin>
 			</plugins>
@@ -74,7 +73,7 @@
                 </configuration>
             </plugin>
 			<plugin>
-				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
+				<groupId>com.simpligility.maven.plugins</groupId>
 				<artifactId>android-maven-plugin</artifactId>
 				<configuration>
 					<sdk>
