Added official exports for Bytecoder based WASM Renderer

--- a/gameengine-tools/pom.xml
+++ b/gameengine-tools/pom.xml
@@ -99,7 +99,7 @@
         </dependency>
         <dependency>
             <groupId>de.mirkosertic</groupId>
-            <artifactId>gameengine-wasmrenderer</artifactId>
+            <artifactId>gameengine-bytecoderrenderer</artifactId>
             <type>war</type>
             <scope>provided</scope>
         </dependency>
