--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,7 @@
     <properties>
         <teavm.version>0.5.1</teavm.version>
         <bytecoder.version>2019-12-08</bytecoder.version>
+        <javafx.version>12.0.2</javafx.version>
     </properties>
 
     <build>
