--- a/gameengine-androidrenderer/pom.xml
+++ b/gameengine-androidrenderer/pom.xml
@@ -83,6 +83,18 @@
                     <resourceDirectory>res</resourceDirectory>
                     <assetsDirectory>assets</assetsDirectory>
                 </configuration>
+				<dependencies>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.2</version>
+        </dependency>					
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
