Fixed compile errors

--- a/gamecomposer/pom.xml
+++ b/gamecomposer/pom.xml
@@ -67,7 +67,7 @@
                     </execution>
                 </executions>
             </plugin>-->
-            <plugin>
+            <!--<plugin>
                 <groupId>com.zenjava</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <executions>
@@ -91,7 +91,7 @@
                     </jvmArgs>
                     <verbose>true</verbose>
                 </configuration>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <groupId>org.gaul</groupId>
                 <artifactId>modernizer-maven-plugin</artifactId>
