--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <module>gameengine</module>
         <module>gameengine-fxrenderer</module>
         <module>gameengine-gwtrenderer</module>
-        <module>gameengine-androidrenderer</module>
+        <!--<module>gameengine-androidrenderer</module>-->
         <module>gameengine-teavmcommon</module>
         <module>gameengine-teavmrenderer</module>
         <module>gameengine-dragomerenderer</module>
@@ -155,7 +155,7 @@
     </dependencyManagement>
 
     <properties>
-        <teavm.version>0.5.1</teavm.version>
+        <teavm.version>0.6.1</teavm.version>
         <bytecoder.version>2019-12-08</bytecoder.version>
         <javafx.version>12.0.2</javafx.version>
     </properties>
