--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,7 @@ jobs:
      - run: npm install bower -g
      - run: npm install vulcanize -g
      - run: mvn verify
+     - uses: actions/upload-artifact@v1
+       with:
+         name: Games
+         path: 'examples/target/games'
