--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,10 @@ env:
 
 before_install:
   - echo "MAVEN_OPTS='-Xmx3072m -XX:MaxPermSize=512m'" > ~/.mavenrc
-  - sudo wget https://apt.llvm.org/llvm-snapshot.gpg.key
-  - sudo apt-key add llvm-snapshot.gpg.key
-  - sudo add-apt-repository -y "deb http://apt.llvm.org/xenial/   llvm-toolchain-xenial-10  main"
-  - sudo apt-get -q update
-  - sudo apt-get install -y clang-10 lldb-10 lld-10 clangd-10
+  - "sudo wget https://apt.llvm.org/llvm.sh"
+  - "sudo chmod +x llvm.sh"
+  - "sudo sudo ./llvm.sh 10"
+  - "sudo sudo apt-get install -y ocl-icd-opencl-dev clang-10 lldb-10 lld-10 clangd-10"
   - "rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION"
   - "npm install"
   - "npm install electron-packager -g"
