--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
      - uses: actions/checkout@v1
      - uses: joschi/setup-jdk@v1
+       env:
+         ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
        with:
            java-version: '12'
      - uses: actions/setup-node@v1
