--- a/gameengine-dragomerenderer/pom.xml
+++ b/gameengine-dragomerenderer/pom.xml
@@ -128,12 +128,12 @@
                     <dependency>
                         <groupId>org.ow2.asm</groupId>
                         <artifactId>asm</artifactId>
-                        <version>8.0.1</version>
+                        <version>${asm.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.ow2.asm</groupId>
                         <artifactId>asm-commons</artifactId>
-                        <version>8.0.1</version>
+                        <version>${asm.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
