--- a/gameengine-apt/pom.xml
+++ b/gameengine-apt/pom.xml
@@ -19,6 +19,7 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <compilerArgument>-proc:none</compilerArgument>
