--- a/gameengine-editor/pom.xml
+++ b/gameengine-editor/pom.xml
@@ -158,6 +158,12 @@
             <version>2.7.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjdk.nashorn</groupId>
+            <artifactId>nashorn-core</artifactId>
+            <version>15.4</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
