--- a/gamecomposer/pom.xml
+++ b/gamecomposer/pom.xml
@@ -134,6 +134,10 @@
             <artifactId>gameengine-tools</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.openjdk.nashorn</groupId>
+            <artifactId>nashorn-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
