--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,11 @@
                 <artifactId>mockito-core</artifactId>
                 <version>5.3.1</version>
             </dependency>
+            <dependency>
+                <groupId>org.openjdk.nashorn</groupId>
+                <artifactId>nashorn-core</artifactId>
+                <version>15.4</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
